--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -117,6 +117,11 @@ $contentWidth: 1000px
   color: #999999
   text-align: right
 
+.beta-badge
+  font-size: 12px
+  background-color: purple
+  margin-left: 5px
+
 @media only screen and (max-width: 1260px)
   .created-by-text
     display: none
