--- a/src/app/components/hobbie-picker/hobbie-picker.component.sass
+++ b/src/app/components/hobbie-picker/hobbie-picker.component.sass
@@ -15,9 +15,15 @@
   margin: 5px
   padding: 0 5px
   display: inline-block
-  border: 1px solid #bec4c0
+  #border: 1px solid #bec4c0
+  border: 0px
+  color: #fff
+  background-color: #ff6060ff
+  font-weight: bold
   border-radius: 5px
   cursor: pointer
+  &:hover
+    background-color: red
 
 .item-close
     margin-left: 10px
