--- a/src/app/components/pages/find-people-page/find-people-page.component.html
+++ b/src/app/components/pages/find-people-page/find-people-page.component.html
@@ -1,5 +1,5 @@
 <h1>{{ 'Find people' | translate }} <span *ngIf="searchPref && searchPref.location">{{ 'in' | translate }} {{ searchPref.location.fullName }}</span>
-  <fa-icon [icon]="faSearchPref" (click)="openModal(content)" style="cursor: pointer; margin-left: 10px;"></fa-icon>
+  <fa-icon [icon]="faSearchPref" class="primary-item" style="margin-left: 10px;" (click)="openModal(content)"></fa-icon>
 </h1>
 
 <loader *ngIf="loading"></loader>
@@ -37,6 +37,6 @@
       </div>
     </div>
 
-    <button class="btn btn-primary" style="width: 100%; margin-top: 20px;" (click)="saveSearchPref()">{{ 'Save' | translate }}</button>
+    <button class="btn btn-outline-primary" style="width: 100%; margin-top: 20px;" (click)="saveSearchPref()">{{ 'Save' | translate }}</button>
   </div>
 </ng-template>
