--- a/src/app/components/pages/settings-page/settings-page.component.html
+++ b/src/app/components/pages/settings-page/settings-page.component.html
@@ -84,11 +84,12 @@
       </div>
 
     </form>
-    <button class="btn btn-primary" (click)="saveAccountInfo()">{{ 'Save' | translate }}</button>
+    <button class="btn btn-outline-primary" (click)="saveAccountInfo()">{{ 'Save' | translate }}</button>
   </div>
 
   <div *ngIf="'profile_info' === activeTab" class="option-body rounded shadow">
     <form [formGroup]="profileInfoForm">
+      <h3>{{ 'Appearance' | translate }}</h3>
       <div class="form-group row">
         <label for="inputPassword" class="col-sm-3 col-form-label">{{ 'Body type' | translate }}</label>
         <div class="col-sm-9">
@@ -127,6 +128,9 @@
         </div>
       </div>
 
+      <hr/>
+
+      <h3>{{ 'Lifestyle' | translate }}</h3>
       <div class="form-group row">
         <label for="inputPassword" class="col-sm-3 col-form-label">{{ 'Smoking' | translate }}</label>
         <div class="col-sm-9">
@@ -167,6 +171,9 @@
         </div>
       </div>
 
+      <hr/>
+
+      <h3>{{ 'Family' | translate }}</h3>
       <div class="form-group row">
         <label for="inputPassword" class="col-sm-3 col-form-label">{{ 'Do you have children?' | translate }}</label>
         <div class="col-sm-9">
@@ -175,6 +182,12 @@
           </div>
           <div class="radio">
             <label><input type="radio" value="does_not_have" name="children_status" formControlName="children_status">{{ 'No' | translate }}</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="does_not_have_but_wants" name="children_status" formControlName="children_status">{{ 'No, but I want them' | translate }}</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="does_not_have_and_does_not_want" name="children_status" formControlName="children_status">{{ 'No and I don\'t them' | translate }}</label>
           </div>
           <div>
             <small *ngIf="children_status.invalid && (children_status.dirty || children_status.touched)" class="text-danger">
@@ -206,9 +219,70 @@
           </div>
         </div>
       </div>
+
+      <hr/>
+
+      <h3>{{ 'Work & Education' | translate }}</h3>
+      <div class="form-group row">
+        <label for="inputPassword" class="col-sm-3 col-form-label">{{ 'Education' | translate }}</label>
+        <div class="col-sm-9">
+          <div class="radio">
+            <label><input type="radio" value="not_tell" name="education_status" formControlName="education_status">{{ 'Rather not tell' | translate }}</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="none" name="education_status" formControlName="education_status">Нямам</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="entry" name="education_status" formControlName="education_status">Основно</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="mid" name="education_status" formControlName="education_status">Средно</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="higher" name="education_status" formControlName="education_status">Визше</label>
+          </div>
+          <div>
+            <small *ngIf="education_status.invalid && (education_status.dirty || education_status.touched)" class="text-danger">
+              {{ 'Required field' | translate }}
+            </small>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="inputPassword" class="col-sm-3 col-form-label">{{ 'Work' | translate }}</label>
+        <div class="col-sm-9">
+          <div class="radio">
+            <label><input type="radio" value="not_tell" name="employment_status" formControlName="employment_status">{{ 'Rather not tell' | translate }}</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="full_time" name="employment_status" formControlName="employment_status">{{ 'Full-time' | translate }}</label>
+          </div>
+          <div class="radio">
+            <label><input type="radio" value="part_time" name="employment_status" formControlName="employment_status">{{ 'Part-time' | translate }}</label>
+          </div>
+          <div class="radio disabled">
+            <label><input type="radio" value="freelance" name="employment_status" formControlName="employment_status">{{ 'Freelancer' | translate }}</label>
+          </div>
+          <div class="radio disabled">
+            <label><input type="radio" value="self_employed" name="employment_status" formControlName="employment_status">{{ 'Self-employed' | translate }}</label>
+          </div>
+          <div class="radio disabled">
+            <label><input type="radio" value="unemployed" name="employment_status" formControlName="employment_status">{{ 'Unemployed' | translate }}</label>
+          </div>
+          <div class="radio disabled">
+            <label><input type="radio" value="retired" name="employment_status" formControlName="employment_status">{{ 'Retired' | translate }}</label>
+          </div>
+          <div>
+            <small *ngIf="employment_status.invalid && (employment_status.dirty || employment_status.touched)" class="text-danger">
+              {{ 'Required field' | translate }}
+            </small>
+          </div>
+        </div>
+      </div>
     </form>
 
-    <button class="btn btn-primary" (click)="saveProfileInfo()">{{ 'Save' | translate }}</button>
+    <button class="btn btn-outline-primary" (click)="saveProfileInfo()">{{ 'Save' | translate }}</button>
   </div>
 
   <div *ngIf="'security' === activeTab" class="option-body rounded shadow">
@@ -276,7 +350,7 @@
       </div>
     </form>
 
-    <button class="btn btn-primary" [disabled]="loadingSecurity" (click)="saveSecurity()">{{ 'Save' | translate }}</button>
+    <button class="btn btn-outline-primary" [disabled]="loadingSecurity" (click)="saveSecurity()">{{ 'Save' | translate }}</button>
   </div>
 
   <div *ngIf="'account' === activeTab" class="option-body rounded shadow">
@@ -296,6 +370,6 @@
         {{ 'Invalid password' | translate }}
       </small>
     </div>
-    <button class="btn btn-outline-dark" (click)="deactivate()" [disabled]="!confirmPasswordModal || 0 === confirmPasswordModal.trim().length" style="width: 100%;">{{ 'Deactivate' | translate }}</button>
+    <button class="btn btn-outline-primary" (click)="deactivate()" [disabled]="!confirmPasswordModal || 0 === confirmPasswordModal.trim().length" style="width: 100%;">{{ 'Deactivate' | translate }}</button>
   </div>
 </ng-template>
