--- a/src/app/components/pages/user-page/user-page.component.html
+++ b/src/app/components/pages/user-page/user-page.component.html
@@ -38,17 +38,19 @@
                 {{ 'an intros to this user.' | translate }}
               </div>
               <ng-template #actionBtns>
-                <button *ngIf="!user.relation_status" class="btn btn-outline-dark" style="margin-right: 10px;"
-                  (click)="sendSmile()">
+                <button *ngIf="!user.relation_status" class="btn btn-outline-primary user-action-item" (click)="sendSmile()">
+                  <fa-icon class="user-action-icon smile-icon" [icon]="faSmile"></fa-icon>
                   {{ 'Smile' | translate }}
                 </button>
   
-                <button *ngIf="!user.relation_status" class="btn btn-outline-dark" (click)="openIntroDialog(introDialog)">
+                <button *ngIf="!user.relation_status" class="btn btn-outline-primary user-action-item" (click)="openIntroDialog(introDialog)">
+                  <fa-icon class="user-action-icon message-icon" [icon]="faSendIntro"></fa-icon>
                   {{ 'Send intro' | translate }}
                 </button>
   
-                <button *ngIf="'matched' === user.relation_status" class="btn btn-outline-dark"
+                <button *ngIf="'matched' === user.relation_status" class="btn btn-outline-primary user-action-item"
                   style="margin-right: 10px;" (click)="unmatch()">
+                  <fa-icon class="user-action-icon unmatch-icon" [icon]="faUnmatch"></fa-icon>
                   {{ 'Unmatch' | translate }}
                 </button>
   
@@ -60,8 +62,9 @@
                   {{ 'You have sent an intro to them' | translate }}
                 </div>
   
-                <button *ngIf="'matched' === user.relation_status" class="btn btn-outline-dark"
+                <button *ngIf="'matched' === user.relation_status" class="btn btn-outline-primary user-action-item"
                   [routerLink]="['/chat/user/' + userId]">
+                  <fa-icon class="user-action-icon message-icon" [icon]="faSendMessage"></fa-icon>
                   {{ 'Message' | translate }}
                 </button>
               </ng-template>
@@ -117,10 +120,8 @@
 
               <h5>
                 {{ 'Interests' | translate }}
-                <fa-icon *ngIf="!editingInterests && isLoggedUser" class="edit-btn" (click)="editInterests()"
-                  [icon]="faPen"></fa-icon>
-                <fa-icon *ngIf="editingInterests && isLoggedUser" class="edit-btn" (click)="saveInterests()"
-                  [icon]="faSave"></fa-icon>
+                <fa-icon *ngIf="!editingInterests && isLoggedUser" class="edit-btn primary-item" (click)="editInterests()" [icon]="faPen"></fa-icon>
+                <fa-icon *ngIf="editingInterests && isLoggedUser" class="edit-btn primary-item" (click)="saveInterests()" [icon]="faSave"></fa-icon>
               </h5>
               <div *ngIf="!editingInterests">
                 <div *ngIf="getInterests().length === 0">{{ 'No interests yet.' | translate }}</div>
@@ -138,10 +139,8 @@
 
               <h5>
                 {{ 'Free time activities' | translate }}
-                <fa-icon *ngIf="!editingActivities && isLoggedUser" class="edit-btn" (click)="editFreeActivities()"
-                  [icon]="faPen"></fa-icon>
-                <fa-icon *ngIf="editingActivities && isLoggedUser" class="edit-btn" (click)="saveActivities()"
-                  [icon]="faSave"></fa-icon>
+                <fa-icon *ngIf="!editingActivities && isLoggedUser" class="edit-btn primary-item" (click)="editFreeActivities()" [icon]="faPen"></fa-icon>
+                <fa-icon *ngIf="editingActivities && isLoggedUser" class="edit-btn primary-item" (click)="saveActivities()" [icon]="faSave"></fa-icon>
               </h5>
               <div *ngIf="!editingActivities">
                 <div *ngIf="getActivities().length === 0">{{ 'No activities yet.' | translate }}</div>
@@ -158,10 +157,8 @@
 
               <h5>
                 {{ 'From' | translate }}
-                <fa-icon *ngIf="!editingFrom && isLoggedUser" class="edit-btn" (click)="editFrom()" [icon]="faPen">
-                </fa-icon>
-                <fa-icon *ngIf="editingFrom && isLoggedUser" class="edit-btn" (click)="saveFrom()" [icon]="faSave">
-                </fa-icon>
+                <fa-icon *ngIf="!editingFrom && isLoggedUser" class="edit-btn primary-item" (click)="editFrom()" [icon]="faPen"></fa-icon>
+                <fa-icon *ngIf="editingFrom && isLoggedUser" class="edit-btn primary-item" (click)="saveFrom()" [icon]="faSave"></fa-icon>
               </h5>
               <div *ngIf="!editingFrom">
                 {{user.location?.fullName}}
@@ -205,10 +202,9 @@
           </div>
           <div class="col-sm-4">
             <div class="shadow-sm rounded profile-info-container">
-              <fa-icon *ngIf="isLoggedUser" class="edit-btn" [icon]="faPen" [routerLink]="['/settings']"
-                [queryParams]="{type: 'profile_info'}"></fa-icon>
+              <fa-icon *ngIf="isLoggedUser" class="edit-btn primary-item" [icon]="faPen" [routerLink]="['/settings']" [queryParams]="{type: 'profile_info'}"></fa-icon>
 
-              <h5 class="user-info-item">{{ 'Info' | translate }}</h5>
+              <h5 class="user-info-item user-info-title">{{ 'Info' | translate }}</h5>
 
               <div *ngIf="!hasUserData()">
                 {{ 'No person info yet.' | translate }}
@@ -216,37 +212,75 @@
 
               <div *ngIf="user.height || user.body" class="user-info-item">
                 <fa-icon [icon]="faBody" class="info-icon"></fa-icon>
-                <span *ngIf="user.height">{{ 'HEIGHT' | translate:{'height': user.height } }}</span>
-                <span *ngIf="user.body">
-                  <span *ngIf="user.height">,</span>
-                  {{ user.body | translate }}
+                <span class="info-text">
+                  <span *ngIf="user.height">{{ 'HEIGHT' | translate:{'height': user.height } }}</span>
+                  <span *ngIf="user.body">
+                    <span *ngIf="user.height">,</span>
+                    {{ user.body | translate }}
+                  </span>
                 </span>
               </div>
               <div *ngIf="user.smoking" class="user-info-item">
                 <fa-icon [icon]="faSmoking" class="info-icon"></fa-icon>
-                <span *ngIf="user.smoking == 'regularly'">{{ 'Smokes regularly' | translate }}</span>
-                <span *ngIf="user.smoking == 'sometimes'">{{ 'Smokes sometimes' | translate }}</span>
-                <span *ngIf="user.smoking == 'never'">{{ 'Doesn\'t smoke' | translate }}</span>
+                <span *ngIf="user.smoking == 'regularly'" class="info-text">{{ 'Smokes regularly' | translate }}</span>
+                <span *ngIf="user.smoking == 'sometimes'" class="info-text">{{ 'Smokes sometimes' | translate }}</span>
+                <span *ngIf="user.smoking == 'never'" class="info-text">{{ 'Doesn\'t smoke' | translate }}</span>
               </div>
               <div *ngIf="user.drinking" class="user-info-item">
                 <fa-icon [icon]="faCocktail" class="info-icon"></fa-icon>
-                <span *ngIf="user.drinking == 'regularly'">{{ 'Drinks regularly' | translate }}</span>
-                <span *ngIf="user.drinking == 'sometimes'">{{ 'Drinks socially' | translate }}</span>
-                <span *ngIf="user.drinking == 'never'">{{ 'Doesn\'t drink' | translate }}</span>
+                <span *ngIf="user.drinking == 'regularly'" class="info-text">{{ 'Drinks regularly' | translate }}</span>
+                <span *ngIf="user.drinking == 'sometimes'" class="info-text">{{ 'Drinks socially' | translate }}</span>
+                <span *ngIf="user.drinking == 'never'" class="info-text">{{ 'Doesn\'t drink' | translate }}</span>
               </div>
               <div *ngIf="user.children_status" class="user-info-item">
                 <fa-icon [icon]="faChild" class="info-icon"></fa-icon>
-                <span *ngIf="user.children_status == 'has'">{{ 'Has childen' | translate }}</span>
-                <span *ngIf="user.children_status == 'does_not_have'">{{ 'Doesn\'t have children' | translate }}</span>
+                <span *ngIf="user.children_status === 'has'" class="info-text">{{ 'Has childen' | translate }}</span>
+                <span *ngIf="user.children_status === 'does_not_have'" class="info-text">{{ 'Doesn\'t have children' | translate }}</span>
+                <span *ngIf="user.children_status === 'does_not_have_but_wants'" class="info-text">{{ 'Doesn\'t have children, but wants them' | translate }}</span>
+                <span *ngIf="user.children_status === 'does_not_have_and_does_not_want'" class="info-text">{{ 'Doesn\'t have children and doesn\'t want them' | translate }}</span>
               </div>
               <div *ngIf="user.pet_status" class="user-info-item">
                 <fa-icon [icon]="faCat" class="info-icon"></fa-icon>
-                <span *ngIf="user.pet_status == 'cat'">{{ 'Has cat(s)' | translate }}</span>
-                <span *ngIf="user.pet_status == 'dog'">{{ 'Has dog(s)' | translate }}</span>
-                <span *ngIf="user.pet_status == 'other'">{{ 'Has other pet(s)' | translate }}</span>
-                <span *ngIf="user.pet_status == 'none'">{{ 'Doesn\'t have pets' | translate }}</span>
+                <span *ngIf="user.pet_status == 'cat'" class="info-text">{{ 'Has cat(s)' | translate }}</span>
+                <span *ngIf="user.pet_status == 'dog'" class="info-text">{{ 'Has dog(s)' | translate }}</span>
+                <span *ngIf="user.pet_status == 'other'" class="info-text">{{ 'Has other pet(s)' | translate }}</span>
+                <span *ngIf="user.pet_status == 'none'" class="info-text">{{ 'Doesn\'t have pets' | translate }}</span>
+              </div>
+              <div *ngIf="user.education_status" class="user-info-item">
+                <fa-icon [icon]="faEducation" class="info-icon"></fa-icon>
+                <span *ngIf="'none' === user.education_status" class="info-text">Без образование</span>
+                <span *ngIf="'entry' === user.education_status" class="info-text">Основно образование</span>
+                <span *ngIf="'mid' === user.education_status" class="info-text">Средно образование</span>
+                <span *ngIf="'higher' === user.education_status" class="info-text">Визше образование</span>
+              </div>
+              <div *ngIf="user.employment_status" class="user-info-item">
+                <fa-icon [icon]="faEmployment" class="info-icon"></fa-icon>
+                <span *ngIf="'full_time' === user.employment_status" class="info-text">{{ 'Full-time' | translate }}</span>
+                <span *ngIf="'part_time' === user.employment_status" class="info-text">{{ 'Part-time' | translate }}</span>
+                <span *ngIf="'self_employed' === user.employment_status" class="info-text">{{ 'Self-employed' | translate }}</span>
+                <span *ngIf="'freelance' === user.employment_status" class="info-text">{{ 'Freelancer' | translate }}</span>
+                <span *ngIf="'unemployed' === user.employment_status" class="info-text">{{ 'Unemployed' | translate }}</span>
+                <span *ngIf="'retired' === user.employment_status" class="info-text">{{ 'Retired' | translate }}</span>
               </div>
             </div>
+
+            <div class="shadow-sm rounded profile-info-container" style="margin-top: 30px;">
+              <fa-icon *ngIf="isLoggedUser" class="edit-btn primary-item" [icon]="faPen" (click)="openSearchPrefModal()"></fa-icon>
+
+              <h5 class="user-info-item user-info-title">{{ 'What\'s looking for' | translate }}</h5>
+
+              <div class="user-info-item">
+                <fa-icon [icon]="faLookingFor" class="info-icon"></fa-icon>
+                <span class="info-text">
+                  {{ user.gender + ':looking_for' | translate }} {{ 'wants' | translate }} {{ user.interested_in + ':wants' | translate }}
+                </span>
+              </div>
+              <div *ngIf="0 < lookingFor.length" class="user-info-item">
+                <fa-icon [icon]="faLookingForRelation" class="info-icon"></fa-icon>
+                <span *ngFor="let item of lookingFor" class="info-text">{{ item.item | translate }}{{ item.s }} </span>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
@@ -271,7 +305,7 @@
                 style="display: none;">
               <button class="btn btn-outline-danger" style="position: absolute; top: 3px; right: 3px;"
                 (click)="removeImage($event, ix + 1)" [disabled]="loadingImages[ix + 1]">
-                <fa-icon [icon]="faTimesCircle"></fa-icon>
+                <fa-icon [icon]="faTimes"></fa-icon>
               </button>
             </div>
 
@@ -300,7 +334,7 @@
 
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Close click')">{{ 'Done' | translate }}</button>
+      <button type="button" class="btn btn-outline-primary" (click)="modal.close('Close click')">{{ 'Done' | translate }}</button>
     </div>
   </ng-template>
 
@@ -353,7 +387,7 @@
 
     </div>
     <div class="modal-footer">
-      <button class="btn btn-outline-dark" (click)="sendIntro()"
+      <button class="btn btn-outline-primary" (click)="sendIntro()"
         [disabled]="!introData && (0 === introMsg.trim().length || introMsg.length > 255)">{{ 'Send' | translate }}</button>
     </div>
   </ng-template>
@@ -383,7 +417,7 @@
         <textarea id="details" class="form-control" placeholder="{{ 'Give us more details..' | translate }}"
           [(ngModel)]='reportDetails'></textarea>
       </div>
-      <button class="btn btn-outline-dark" (click)="sendReport(reportType.value)"
+      <button class="btn btn-outline-primary" (click)="sendReport(reportType.value)"
         [disabled]="reporting || !reportDetails || 0 === reportDetails.trim().length" style="width: 100%;">{{ 'Send' | translate }}</button>
     </div>
   </ng-template>
