--- a/src/styles.sass
+++ b/src/styles.sass
@@ -32,11 +32,46 @@ body
   margin: 5px
   padding: 0 5px
   display: inline-block
-  border: 1px solid #bec4c0
+  #border: 1px solid #bec4c0
+  color: #fff
+  background-color: #ff6060ff
+  font-weight: bold
+  border: 0px
   border-radius: 5px
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap'
+
+.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle
+  background-color: #ff6060ff
+  border-color: #ff6060ff
+
+.btn.btn-primary
+  background-color: #ff6060ff
+  border-color: #ff6060ff
+  &:hover
+    background-color: red
+    border-color: red
+
+.btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle
+  background-color: #ff6060ff
+  border-color: #ff6060ff
+
+.btn.btn-outline-primary
+  color: #ff6060ff
+  border-color: #ff6060ff
+  &:hover
+    color: #fff
+    background-color: #ff6060ff
+    border-color: #ff6060ff
+
+.primary-item
+  margin-left: 5px
+  transition: color .3s
+
+  &:hover
+    color: #ff6060ff
+    cursor: pointer
 
 .intro-item:hover
   .media-btn
