Added rather_not_tell option for all profile info

--- a/src/app/components/pages/onboarding-page/onboarding-page.component.html
+++ b/src/app/components/pages/onboarding-page/onboarding-page.component.html
@@ -131,6 +131,9 @@
         <div class="col-sm-6">
           <label for="inputPassword">{{ 'Body type' | translate }}</label>
           <div class="radio">
+            <label><input type="radio" value="not_tell" name="body" formControlName="body">{{ 'Rather not tell' | translate }}</label>
+          </div>
+          <div class="radio">
             <label><input type="radio" value="fit" name="body" formControlName="body">{{ 'Fit' | translate }}</label>
           </div>
           <div class="radio">
@@ -170,6 +173,9 @@
         <div class="col-sm-6">
           <label for="inputPassword">{{ 'Smoking' | translate }}</label>
           <div class="radio">
+            <label><input type="radio" value="not_tell" name="smoking" formControlName="smoking">{{ 'Rather not tell' | translate }}</label>
+          </div>
+          <div class="radio">
             <label><input type="radio" value="regularly" name="smoking" formControlName="smoking">{{ 'Regularly' | translate }}</label>
           </div>
           <div class="radio">
@@ -186,6 +192,9 @@
         </div>
         <div class="col-sm-6">
           <label for="inputPassword">{{ 'Drinking' | translate }}</label>
+          <div class="radio">
+            <label><input type="radio" value="not_tell" name="drinking" formControlName="drinking">{{ 'Rather not tell' | translate }}</label>
+          </div>
           <div class="radio">
             <label><input type="radio" value="regularly" name="drinking" formControlName="drinking">{{ 'Regularly' | translate }}</label>
           </div>
@@ -211,6 +220,9 @@
           <label for="inputPassword">{{ 'Do you have children?' | translate }}</label>
 
           <div class="radio">
+            <label><input type="radio" value="not_tell" name="children_status" formControlName="children_status">{{ 'Rather not tell' | translate }}</label>
+          </div>
+          <div class="radio">
             <label><input type="radio" value="has" name="children_status" formControlName="children_status">{{ 'Yes' | translate }}</label>
           </div>
           <div class="radio">
@@ -231,6 +243,9 @@
         </div>
         <div class="col-sm-6">
           <label for="inputPassword">{{ 'Do you have pets?' | translate }}</label>
+          <div class="radio">
+            <label><input type="radio" value="not_tell" name="pet_status" formControlName="pet_status">{{ 'Rather not tell' | translate }}</label>
+          </div>
           <div class="radio">
             <label><input type="radio" value="cat" name="pet_status" formControlName="pet_status">{{ 'Cat(s)' | translate }}</label>
           </div>
