--- a/src/app/components/pages/user-page/user-page.component.sass
+++ b/src/app/components/pages/user-page/user-page.component.sass
@@ -5,11 +5,13 @@
   padding: 6px
 
   .image-content
-    float: left
+    #float: left
     width: 180px
     height: 180px
     overflow: hidden
     position: absolute
+    top: -100px
+    border-radius: 100%
     background-size: 180px 180px
 
   .image-content:hover
@@ -26,11 +28,38 @@
     background-color: rgba(46,62,72,.4)
     display: none
 
-  .name-content
+  .user-images-cont
     float: left
-    width: 340px
+    margin-left: 170px
+    #width: 340px
     padding: 5px
     padding-left: 15px
+
+  .user-images
+    margin-bottom: 10px
+
+  .user-images-cont2
+    padding: 5px
+    padding-left: 185px
+    width: 100%
+
+  .name-resp
+    display: none
+
+  .user-actions-cont
+    position: absolute
+    top: 20px
+    right: 20px
+
+  .user-actions-cont2
+    #text-align: right
+    button
+      margin-top: 5px
+
+  .user-report-cont
+    position: absolute
+    top: -45px
+    right: 0
 
   .interest-item
     &.mutual
@@ -160,13 +189,13 @@ ul
 
   .edit-btn
     position: absolute
-    top: 10px
-    right: 10px
+    top: 0
+    right: 0
 
 .intro-type-title
   margin-bottom: 10px
 
-.name
+.name-cont
   font-weight: 700
   font-size: 20px
 
@@ -187,3 +216,51 @@ pre
 @media only screen and (max-width: 990px)
   .add-image-item
     width: 100%
+
+@media only screen and (max-width: 770px)
+  .profile-content .user-images-cont
+    position: absolute
+    top: 0
+    padding: 5px
+    padding-left: 15px
+
+  .profile-content .user-actions-cont
+    position: static
+    width: 100%
+    text-align: center
+    margin-top: 80px
+
+@media only screen and (max-width: 565px)
+  .profile-content .image-content
+    margin-left: auto
+    margin-right: auto
+    left: 0
+    right: 0
+    margin-top: 0
+
+  .profile-content .user-images-cont2
+    padding: 0
+    text-align: center
+
+  .profile-content .name-main
+    display: none
+
+  .profile-content .name-resp
+    display: block
+    text-align: center
+    margin-top: 80px
+
+  .profile-content .user-actions-cont
+    margin-top: 0
+
+  .profile-content .user-images-cont
+    float: none
+    position: static
+    margin: auto
+    width: 100%
+    text-align: center
+    #margin-top: 80px
+    margin-top: 0
+    margin-bottom: 10px
+    padding: 5px
+    padding-left: 15px
