Added profile question and answers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="page-cont">
-  <div *ngIf="isLoggedIn()">
+  <div *ngIf="isLoggedIn">
     <div class="header shadow-sm">
       <div class="content">
         <div class="home-data">
