--- a/src/app/components/pages/user-page/user-page.component.html
+++ b/src/app/components/pages/user-page/user-page.component.html
@@ -237,6 +237,20 @@
                 (locationChanged)="locationChanged($event)"></location-select>
             </div>
 
+            <div  *ngFor="let answer of profileAnswers" class="shadow-sm rounded" style="padding: 15px; background-color: #fff; margin-bottom: 30px; position: relative;">
+              <fa-icon *ngIf="isLoggedUser" class="edit-btn primary-item" style="position: absolute; right: 0; top: 0;" [icon]="faPen" (click)="editAnswer(answer)"></fa-icon>
+                <h5>{{ answer.question_text }}</h5>
+                <div style="margin-top: 10px;">
+                  <div *ngIf="answer.noAnswer" style="color: thistle; cursor: pointer; word-wrap: break-word;" (click)="editAnswer(answer)">
+                    {{ 'Write something here...' | translate }}
+                  </div>
+                  <div *ngIf="!answer.noAnswer" style="word-wrap: break-word;">
+                    {{ answer.answer_text }}
+                  </div>
+                </div>
+
+            </div>
+
             <div *ngIf="user.intro && 'intro_to_me' === user.relation_status" class="shadow-sm rounded intro-item"
               (mouseenter)="parentSubject.next({ play: 0 })" (mouseleave)="parentSubject.next({ pause: 0 })"
               style="background-color: #fff; padding: 10px; position: relative; "
@@ -508,5 +522,43 @@
         style="width: 100%;">{{ 'Send' | translate }}</button>
     </div>
   </ng-template>
+
+  <ng-template #editAnswerDialog let-modal>
+    <!-- <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">{{ 'Image upload' | translate }}</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div> -->
+    <div class="modal-body">
+      <div class="form-group">
+        <select class="form-control" id="exampleFormControlSelect1" (change)="editingQuestion.questionId = $event.target.value">
+          <option *ngFor="let question of allProfileQuestions[editingQuestion.categoryId]"
+                  [selected]="question.question_id == editingQuestion.questionId"
+                  [value]="question.question_id"
+                  >
+            <h4>{{ question.question_text }}</h4>
+          </option>
+        </select>
+        <div style="margin-top: 15px;">
+          <textarea class="form-control"
+                    style="border: 0; min-height: 150px;"
+                    placeholder="{{ 'Write something here...' | translate }}"
+                    [(ngModel)]="editingQuestion.answer"
+                    ></textarea>
+        </div>
+      </div>
+
+      <div style="text-align: right;">
+        <button type="button" class="btn btn-outline-dark" style="margin-right: 15px;"
+          (click)="modal.close('Close click')" [disabled]="loadings['editAnswer']">{{ 'Cancel' | translate }}</button>
+        <button type="button" class="btn btn-outline-primary"
+          (click)="saveAsnwer()" [disabled]="loadings['editAnswer']">{{ 'Save' | translate }}</button>
+      </div>
+    </div>
+    <!-- <div class="modal-footer">
+    </div> -->
+  </ng-template>
+
 
 <modal-gallery [parentSubject]="gallerySubject" [images]="user.images"></modal-gallery>
