--- a/src/app/components/pages/user-page/user-page.component.sass
+++ b/src/app/components/pages/user-page/user-page.component.sass
@@ -159,7 +159,9 @@ ul
 .intro-response
   border-bottom: 4px solid #de7ec8
   display: inline-block
-  margin-top: 20px
+  #margin-top: 20px
+  padding: 0 5px
+  margin-right: 10px
 
 .edit-btn
   vertical-align: middle
