--- a/src/app/components/pages/intro-page/intro-page.component.html
+++ b/src/app/components/pages/intro-page/intro-page.component.html
@@ -78,7 +78,7 @@
 
     <div class="form-group required">
       <label class="control-label" for="details">{{ 'Details' | translate }}</label>
-      <textarea id="details" class="form-control" placeholder="{{ 'Give us more details..' | translate }}" [(ngModel)]='reportDetails'></textarea>
+      <textarea id="details" class="form-control" placeholder="{{ 'Give us more details..' | translate }}" [(ngModel)]="reportDetails"></textarea>
     </div>
     <button class="btn btn-outline-primary" (click)="sendReport(reportType.value)" [disabled]="reporting[reportIntro.user.id] || !reportDetails || 0 === reportDetails.trim().length" style="width: 100%;">{{ 'Send' | translate }}</button>
   </div>
